--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies / build
 node_modules
 dist
 dist-ssr
+coverage
+public
 *.local
 
 # Editor directories and files
