--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
 
       - name: Run tests with coverage
-        run: npx nx run api:test --coverage
+        run: npm run test
 
   sonar:
     runs-on: ubuntu-latest
@@ -63,8 +63,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build with Nx
-        run: npx nx build api
+      - name: Build app (Vite)
+        run: npm run build
 
       - name: Upload dist
         uses: actions/upload-artifact@v4
