--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
 
       - name: Run tests with coverage
-        run: npm run test
+        run: npm run test:coverage
 
   sonar:
     runs-on: ubuntu-latest
