--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "@tailwindcss/vite": "^4.1.18",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^25.1.0",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vitest/coverage-v8": "^4.0.18",
@@ -33,7 +33,7 @@
     "jsdom": "^28.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
     "vitest": "^4.0.18",
